# MuTAP

./: .gitignore  README.md  pyproject.toml
MuTAP/: Mutants_generation.py  Mutation_Score.py  augmented_prompt.py  generate_test_oracle.py  greedy_test_generator.py
